// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readme-install-string extra scripts 1`] = `
"## Install via a package manager

\`\`\`bash
# npm
$ npm install foo-bar

# Yarn
$ yarn add foo-bar
\`\`\`

Add to local directives:

\`\`\`js
<script>
import FooBar from 'foo-bar'

export default {
  directives: {
    FooBar,
  },
}
</script>
\`\`\`

Or register as a global directive:

\`\`\`js
import Vue from 'vue'
import FooBar from 'foo-bar'

Vue.directive('FooBar', FooBar)
\`\`\`

Or register as a plugin:

\`\`\`js
import Vue from 'vue'
import FooBar from 'foo-bar'

Vue.use(FooBar)
\`\`\`

## Install via CDN

\`\`\`html
<script src=\\"https://unpkg.com/vue\\"></script>
<script src=\\"https://unpkg.com/mermaid/dist/mermaid.min.js\\"></script>
<script src=\\"https://unpkg.com/foo-bar\\"></script>
\`\`\`"
`;

exports[`readme-install-string valid 1`] = `
"## Install via a package manager

\`\`\`bash
# npm
$ npm install foo-bar

# Yarn
$ yarn add foo-bar
\`\`\`

Add to local directives:

\`\`\`js
<script>
import FooBar from 'foo-bar'

export default {
  directives: {
    FooBar,
  },
}
</script>
\`\`\`

Or register as a global directive:

\`\`\`js
import Vue from 'vue'
import FooBar from 'foo-bar'

Vue.directive('FooBar', FooBar)
\`\`\`

Or register as a plugin:

\`\`\`js
import Vue from 'vue'
import FooBar from 'foo-bar'

Vue.use(FooBar)
\`\`\`

## Install via CDN

\`\`\`html
<script src=\\"https://unpkg.com/vue\\"></script>
<script src=\\"https://unpkg.com/foo-bar\\"></script>
\`\`\`"
`;
